feature(wysiwyg): Support for syntax highlighting
Fixes #43

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "elgg/showcase": "dev-master",
         "ewinslow/elgg-google": "dev-master",
         "jumbojett/vroom": "dev-patch-1",
-        "thetruebumba/spam_login_filter": "dev-master"
+        "thetruebumba/spam_login_filter": "dev-master",
+        "bower-asset/require-css": "0.1.8",
+        "components/highlightjs": "^8.7.0"
     },
     "require-dev": {
         "srokap/code_review": "^1.0.5",
