--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "arckinteractive/elgg_solr": "dev-master",
         "beck24/image_proxy": "dev-patch-1",
+        "beck24/spam_login_filter": "dev-master",
         "beck24/spam_throttle": "dev-patch-1",
         "beck24/trusted_users": "dev-patch-1",
         "beck24/trusted_user_spam_report": "dev-patch-1",
@@ -26,7 +27,6 @@
         "elgg/showcase": "dev-master",
         "ewinslow/elgg-google": "dev-master",
         "jumbojett/vroom": "dev-master",
-        "thetruebumba/spam_login_filter": "dev-master",
         "bower-asset/require-css": "0.1.8",
         "components/highlightjs": "^8.7.0"
     },
@@ -76,6 +76,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/ewinslow/trusted_user_spam_report"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/beck24/spam_login_filter"
         }
     ]
 }
