chore(plugins): add recaptcha plugin

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "beck24/spam_throttle": "dev-master",
         "beck24/trusted_users": "dev-master",
         "beck24/trusted_user_spam_report": "dev-master",
+        "beck24/elgg_recaptcha": "~1.0",
         "brettp/admin_notes": "dev-master",
         "brettp/bulk_user_admin": "dev-master",
         "brettp/elgg-registration-randomizer": "dev-no-mysql-2.0",
