--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ php: 5.5
 
 sudo: false
 
-before_install: composer global require fxp/composer-asset-plugin -vvv
+before_install:
+  - composer self-update
+  - composer global require fxp/composer-asset-plugin -vvv
 
 install: composer install -vvv
 
