--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "prefer-stable": true,
     "minimum-stability": "dev",
     "require": {
-        "arckinteractive/elgg_solr": "dev-master",
+        "arckinteractive/elgg_solr": "^2.0",
         "beck24/image_proxy": "dev-master",
         "beck24/spam_login_filter": "dev-master",
         "beck24/spam_throttle": "dev-master",
@@ -22,7 +22,7 @@
         "elgg/community_web_services": "dev-master",
         "elgg/dbvalidator": "dev-master",
         "elgg/drop_unvalidated": "dev-master",
-        "elgg/elgg": "2.0.x-dev",
+        "elgg/elgg": "~2.1",
         "elgg/login_as": "~1.9",
         "elgg/opensearch": "dev-master",
         "elgg/showcase": "dev-master",
