--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "ewinslow/elgg-google": "dev-master",
         "jumbojett/vroom": "dev-master",
         "bower-asset/require-css": "0.1.8",
-        "components/highlightjs": "^8.7.0"
+        "components/highlightjs": "^8.7.0",
+        "mrclay/elgg-http-combiner": "^1.0"
     },
     "require-dev": {
         "srokap/code_review": "^1.0.5",
