--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "minimum-stability": "dev",
     "require": {
         "arckinteractive/elgg_solr": "^2.0",
-        "beck24/image_proxy": "dev-master",
-        "beck24/spam_login_filter": "dev-master",
-        "beck24/spam_throttle": "dev-master",
+        "beck24/image_proxy": "~1.2.0",
+        "beck24/spam_login_filter": "~2.1.0",
+        "beck24/spam_throttle": "~2.1.0",
         "beck24/trusted_users": "dev-master",
         "beck24/trusted_user_spam_report": "dev-master",
         "beck24/elgg_recaptcha": "~1.0",
