--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: php
 
 # Keep this up-to-date with the production environment
-php: 7.0
+php: 
+  - 7.0
 
 sudo: false
 
 before_install:
   - composer self-update
-  - composer global require fxp/composer-asset-plugin -vvv
 
-install: composer install -vvv
+install: 
+  - composer install --no-dev
 
-#script: composer test
+# no tests for now
+script: true
