--- a/composer.json
+++ b/composer.json
@@ -9,29 +9,26 @@
         "beck24/spam_throttle": "~2.1.0",
         "beck24/trusted_users": "~1.0.0",
         "beck24/trusted_user_spam_report": "~1.0.0",
-        "beck24/elgg_recaptcha": "~1.0",
         "brettp/admin_notes": "dev-master",
         "brettp/bulk_user_admin": "dev-23-improvements",
         "brettp/elgg-registration-randomizer": "dev-master",
         "brettp/stale_users": "dev-master",
-        "elgg/ban": "dev-master",
-        "elgg/community_groups": "dev-master",
-        "elgg/community_plugins": "dev-master",
-        "elgg/community_solr": "dev-master",
-        "elgg/community_spam_tools": "dev-master",
-        "elgg/community_web_services": "dev-master",
-        "elgg/dbvalidator": "dev-master",
-        "elgg/drop_unvalidated": "dev-master",
+        "elgg/ban": "~1.9.0",
+        "elgg/community_groups": "~1.9.0",
+        "elgg/community_plugins": "~2.3.0",
+        "elgg/community_solr": "~1.2.0",
+        "elgg/community_spam_tools": "~1.8.0",
+        "elgg/community_web_services": "~1.9.1",
+        "elgg/drop_unvalidated": "~1.1.0",
         "elgg/elgg": "~2.3",
         "elgg/elgg_ajax_register": "^1.0",
         "elgg/login_as": "~1.9",
 		"elgg/community": "dev-master",
-        "elgg/opensearch": "dev-master",
-        "elgg/showcase": "dev-master",
+        "elgg/opensearch": "~1.1.0",
+        "elgg/showcase": "~1.9.0",
         "ewinslow/elgg-google": "dev-master",
         "jumbojett/vroom": "dev-master",
-        "mrclay/elgg-http-combiner": "^1.0.1",
-		"elgg/mentions": "2.3.x-dev"
+        "mrclay/elgg-http-combiner": "^1.0.1"
     },
     "require-dev": {
         "srokap/code_review": "^1.0.5",
