--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,10 @@
         },
 		{
             "type": "vcs",
+            "url": "https://github.com/elgg/showcase"
+        },
+		{
+            "type": "vcs",
             "url": "https://github.com/jumbojett/vroom.git"
         },
         {
